--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -24,8 +24,10 @@
                         <span id="feelslike"></span>
                     </div>
                 </div>
-                <img id="icon" src="" alt="weather icon">
-                <p id="precip">Chance of rain: %</p>
+                <div class="right-container">
+                    <img id="icon" src="" alt="weather icon">
+                    <p id="precip"></p>
+                </div>
             </div>
         </div>
     </body>
